--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 --webkit-font-smoothing: antialiased;
 --moz-scx-font-smoothing: grayscale;
+box-sizing: border-box;
 }
 
 code {
