added sidebar componet and its stylesheet named sidebar.css

--- a/src/screens/home.css
+++ b/src/screens/home.css
@@ -1,6 +1,6 @@
 .main-body{
-    height: 100vw;
+    height: 100vh;
     width: 100vw;
-    background-color: bisque;
+    background-color: #E99072;
     border-radius: 30px;
 }
