added the sidenave and an image to it

--- a/src/shared/globalStyles.css
+++ b/src/shared/globalStyles.css
@@ -1,5 +1,5 @@
 .screen-container{
-    width: calc(100%-100px);
+    width: 1175px;
     height: 100%;
     background-color: black;
     border-radius: 30px;
