--- a/src/components/sidebar/sidebar.css
+++ b/src/components/sidebar/sidebar.css
@@ -5,10 +5,12 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+    
 }
 
 .profile-img{
     width: 50px;
     height: 50px;
     border-radius: 20px;
+    margin-top: 20px;
 }
