--- a/src/components/sidebar/sidebarButton.css
+++ b/src/components/sidebar/sidebarButton.css
@@ -3,23 +3,32 @@ a{
 }
 
 .btn-body{
-    height: 60px;
-    width:60px;
+    height: 80px;
+    width:80px;
     border-radius: 20px;
     color:antiquewhite;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    margin: 5px auto;
+    transition: all 0.1s ease;
 }
 
 .btn-body.active{
     background-color: bisque;
     color:#fff ;
+    transform: scale(1.0);
+}
+
+.btn-body:hover{
+    color: #fff;
 }
 
 .btn-title {
- margin: auto;
- font-weight: bold;
+ margin: 4px auto;
+ font-weight: 600;
+ font-size: 14px;
 
 }
+
