--- a/src/shared/globalStyles.css
+++ b/src/shared/globalStyles.css
@@ -1,14 +1,19 @@
-.screen-container{
-    width: 1175px;
+.screen-container {
+    width: calc(100% - 100px);
     height: 100%;
-    background-color: black;
+    background-color: #1e2a3e;
     border-radius: 30px;
     background-color: #1e2a3e;
     opacity: 1;
-    background-position: repeating-gradient(
-        center at center left,
+    background-image: repeating-radial-gradient(
+        circle at center left,
         transparent 0,
-        #1e2a3e 40px
-    ),
-    repeating-linear-gradient(#23365655, #233656);
-}
+        #233656 100px
+      ),
+      repeating-linear-gradient(#1e2a3e55, #1e2a3e);
+  }
+  
+  .flex {
+    display: flex;
+  }
+  
