--- a/src/components/audioPlayer/waveAnimation.css
+++ b/src/components/audioPlayer/waveAnimation.css
@@ -68,7 +68,7 @@
   
   @keyframes loud {
       25%{
-          transform: scale(1))
+          transform: scale(1)
       }
       50%{
           transform: scale(.4)
